--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           image: docke20/docker-react
           tags: v1, latest
-          registry: registry-url.io
-          dockerfile: Dockerfile
+          registry: docker.io
+
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
