--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - run: docker login -u ${ secrets.DOCKER_USERNAME } -p ${secrets.DOCKER_PASSWORD }
+      - run: docker login -u "docke20" -p "Docker@2005"
       - run: docker build -t docke20/docker-react -f Dockerfile.dev .
