updated the ci pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,6 @@ jobs:
         with:
           image: docke20/docker-react
           tags: v1, latest
-          registry: docker.io
-
+          registry: docke20/docker-react
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
